--- a/homework5/src/main/resources/templates/home2.html
+++ b/homework5/src/main/resources/templates/home2.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css">
     <!-- Подключаем библиотеки Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="bootstrap-5.0.2-dist/js/bootstrap.min.js"> -->
@@ -17,13 +16,13 @@
 <div class="container">
     <nav class="navbar navbar-light bg-info" >
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/novels?name=">
                 <img src="img/w.svg" width="30" height="30" alt="" loading="lazy">
-                    WBNovel
+                    Novels
             </a>
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-dark" type="submit" data-toggle="modal" data-target="#searchModal">Search</button>
+                <input class="form-control me-2" name="name" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-dark" type="submit" data-toggle="modal">Search</button>
             </form>
         </div>
     </nav>
@@ -38,7 +37,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="img/kurasu2.png" alt="First slide">
+            <img class="d-block w-100" src="/img/kurasu2.png" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-dark fs-1 nav-link">Kurasu no Daikirai na Joshi to Kekkon Suru Koto ni Natta</h5>
                 <span class="badge badge-primary text-dark">Drama</span>
@@ -51,7 +50,7 @@
               </div>
           </div>
         <div class="carousel-item">
-            <img src="img/01.png" class="d-block w-100" alt="Third slide">
+            <img src="/img/01.png" class="d-block w-100" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-dark fs-1 nav-link">Boku no Kanojo Sensei</h5>
                 <span class="badge badge-secondary text-primary">Romance</span>
@@ -80,7 +79,7 @@
     <div class="row">
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/31479.jpg" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/31479.jpg" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Lord of the Magical Beasts</h5>
                     
@@ -93,7 +92,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/anata.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/anata.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Anata wo Akiramekirenai Moto Iinazuke ja Dame desu ka?</h5>
                 </div>
@@ -105,7 +104,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/inoru.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/inoru.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Inoru Kami Wo Sirazu, Negau Kokoro no Katachi wo Miezu</h5>
                 </div>
@@ -117,7 +116,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/ankoku.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/ankoku.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Ankoku Kishi to Issho!</h5>
                 </div>
@@ -129,7 +128,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/asahina.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/asahina.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Asahina Wakaba to Marumaru na Kareshi</h5>
                 </div>
@@ -141,7 +140,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/boku.jpg" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/boku.jpg" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Boku no Kanojo Sensei</h5>
                 </div>
@@ -162,7 +161,7 @@
     <div class="row">
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/bokutachi.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/bokutachi.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Bokutachi wa Benkyou ga Dekinai</h5>
                 </div>
@@ -174,7 +173,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/inkya.png" alt="Card image cap" style="height: 220px;"> 
+                <img class="card-img-top" src="/img/inkya.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Inkyara na Ore to Ichatsukitai tte Maji kayo</h5>
                 </div>
@@ -186,7 +185,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/inoru.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/inoru.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Inoru Kami Wo Sirazu, Negau Kokoro no Katachi wo Miezu</h5>
                 </div>
@@ -198,7 +197,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/kibishii.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/kibishii.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Kibishii Onna Joushi ga Koukousei ni Modottara Ore ni Dere Dere suru Riyuu</h5>
                 </div>
@@ -210,7 +209,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/boku.jpg" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/boku.jpg" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Boku no Kanojo Sensei</h5>
                 </div>
@@ -222,7 +221,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/anata.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/anata.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Anata wo Akiramekirenai Moto Iinazuke ja Dame desu ka?</h5>
                 </div>
@@ -243,7 +242,7 @@
     <div class="row">
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/ankoku.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/ankoku.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Ankoku Kishi to Issho!</h5>
                 </div>
@@ -255,7 +254,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/31479.jpg" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/31479.jpg" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Lord of the Magical Beasts</h5>
                 </div>
@@ -267,7 +266,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/inkya.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/inkya.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Inkyara na Ore to Ichatsukitai tte Maji kayo</h5>
                 </div>
@@ -279,7 +278,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/boku.jpg" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/boku.jpg" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Boku no Kanojo Sensei</h5>
                 </div>
@@ -291,7 +290,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/ankoku.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/ankoku.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Ankoku Kishi to Issho!</h5>
                 </div>
@@ -303,7 +302,7 @@
 
         <div class="col">
             <div class="card h-100" style="width: 10rem;">
-                <img class="card-img-top" src="img/anata.png" alt="Card image cap" style="height: 220px;">
+                <img class="card-img-top" src="/img/anata.png" alt="Card image cap" style="height: 220px;">
                 <div class="card-body">
                     <h5 class="card-title">Anata wo Akiramekirenai Moto Iinazuke ja Dame desu ka?</h5>
                 </div>
@@ -321,7 +320,7 @@
     <div class="card mb-3 w-100" style="position: relative;">
         <div class="row g-0">
             <div class="col-md-4" style="max-width: 250px;">
-                <img src="img/anata.png" style="max-width: 250px;" alt="...">
+                <img src="/img/anata.png" style="max-width: 250px;" alt="...">
             </div>
         <div class="col-md-8">
             <div class="card-body">
@@ -352,7 +351,7 @@
     <div class="card mb-3 w-100" style="position: relative;">
         <div class="row g-0">
             <div class="col-md-4" style="max-width: 250px;">
-                <img src="img/bokutachi.png" style="max-width: 250px;" alt="...">
+                <img src="/img/bokutachi.png" style="max-width: 250px;" alt="...">
             </div>
         <div class="col-md-8">
             <div class="card-body">
@@ -431,10 +430,10 @@
 
     <div class="container bg-dark text-white" style="margin-top: 10px; margin-bottom: 10px;">
         <h2 align="center">WBNovelJokerge</h2>
-        <h5 align="center">Спасибо за то, что читаете нас!</h2>
+        <h2 align="center">Спасибо за то, что читаете нас!</h2>
     </div>
     <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
-        <img src="img/jokerge.jpg" style="max-width: 20px;"> 
+        <img src="/img/jokerge.jpg" style="max-width: 20px;">
     </div>
 </div>
 
@@ -473,7 +472,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Простите нас!</h5>
+          <h5 class="modal-title">Простите нас!</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
