--- a/homework5/src/main/resources/templates/home2.html
+++ b/homework5/src/main/resources/templates/home2.html
@@ -16,7 +16,7 @@
 <div class="container">
     <nav class="navbar navbar-light bg-info" >
         <div class="container-fluid">
-            <a class="navbar-brand" href="/novels?name=">
+            <a class="navbar-brand" href="/novels">
                 <img src="img/w.svg" width="30" height="30" alt="" loading="lazy">
                     Novels
             </a>
@@ -40,13 +40,13 @@
             <img class="d-block w-100" src="/img/kurasu2.png" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-dark fs-1 nav-link">Kurasu no Daikirai na Joshi to Kekkon Suru Koto ni Natta</h5>
-                <span class="badge badge-primary text-dark">Drama</span>
-                <span class="badge badge-secondary text-primary">Romance</span>
-                <span class="badge badge-success text-danger">Horror</span>
-                <span class="badge badge-danger text-info">Harem</span>
-                <span class="badge badge-warning text-capitalize">War</span>
+                <span class="badge badge-primary">Drama</span>
+                <span class="badge badge-secondary">Romance</span>
+                <span class="badge badge-success">Horror</span>
+                <span class="badge badge-danger">Harem</span>
+                <span class="badge badge-warning">War</span>
                 <span class="badge badge-info">Furry</span>
-                <span class="badge badge-light text-dark">Love</span>
+                <span class="badge badge-light">Love</span>
               </div>
           </div>
         <div class="carousel-item">
